--- a/Doxygen.json.in
+++ b/Doxygen.json.in
@@ -1,12 +1,19 @@
 {
     \"Name\" : \"Doxygen\",
     \"Version\" : \"0.4.1\",
-    \"CompatVersion\" : \"3.5.0\",
+    \"CompatVersion\" : \"$$QTCREATOR_COMPAT_VERSION\",
     \"Vendor\" : \"Fabien Poussin\",
     \"Copyright\" : \"Fabien Poussin\",
-    \"License\" : \"LGPL\",
+    \"License\" : [ \"Commercial Usage\",
+    \"\",
+    \"Licensees holding valid Qt Commercial licenses may use this plugin in accordance with the Qt Commercial License Agreement provided with the Software or, alternatively, in accordance with the terms contained in a written agreement between you and The Qt Company.\",
+    \"\",
+    \"GNU Lesser General Public License Usage\",
+    \"\",
+    \"Alternatively, this plugin may be used under the terms of the GNU Lesser General Public License version 2.1 or version 3 as published by the Free Software Foundation.  Please review the following information to ensure the GNU Lesser General Public License requirements will be met: https://www.gnu.org/licenses/lgpl.html and http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html.\"
+    ],
     \"Category\" : \"C++\",
-    \"Description\" : \"Doxygen for Qt Creator\",
+    \"Description\" : \"This plugin allows doxygen blocs creation for files or full projects as well as full documentation creation.\",
     \"Url\" : \"https://github.com/fpoussin/qtcreator-doxygen\",
     $$dependencyList
 }
