--- a/.github/workflows/build_qmake.yml
+++ b/.github/workflows/build_qmake.yml
@@ -3,8 +3,8 @@ name: QMake Build Matrix
 on: [push]
 
 env:
-  QT_VERSION: 5.14.0
-  QT_CREATOR_VERSION: 4.11.0
+  QT_VERSION: 5.14.2
+  QT_CREATOR_VERSION: 4.12.0
   PLUGIN_PRO: doxygen.pro
   PLUGIN_NAME: Doxygen
 
@@ -17,11 +17,13 @@ jobs:
         config:
         - {
             name: "Windows Latest x64", artifact: "Windows-x64.zip",
+            msvc: win64_msvc2017_64,
             os: windows-latest,
             environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
           }
         - {
             name: "Windows Latest x86", artifact: "Windows-x86.zip",
+            msvc: win32_msvc2017,
             os: windows-latest,
             environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars32.bat"
           }
@@ -48,66 +50,11 @@ jobs:
 
     - name: Download Qt
       id: qt
-      shell: cmake -P {0}
-      run: |
-        set(qt_version $ENV{QT_VERSION})
-
-        string(REPLACE "." "" qt_version_dotless "${qt_version}")
-        if ("${{ runner.os }}" STREQUAL "Windows")
-          set(url_os "windows_x86")
-          if ("${{ matrix.config.environment_script }}" MATCHES "vcvars64.bat")
-            set(qt_package_name "qt.qt5.${qt_version_dotless}.win64_msvc2017_64")
-            set(qt_dir_prefix "${qt_version}/msvc2017_64")
-          elseif ("${{ matrix.config.environment_script }}" MATCHES "vcvars32.bat")
-            set(qt_package_name "qt.qt5.${qt_version_dotless}.win32_msvc2017")
-            set(qt_dir_prefix "${qt_version}/msvc2017")
-          else()
-          endif()
-        elseif ("${{ runner.os }}" STREQUAL "Linux")
-          set(url_os "linux_x64")
-          set(qt_package_name "qt.qt5.${qt_version_dotless}.gcc_64")
-          set(qt_dir_prefix "${qt_version}/gcc_64")
-        elseif ("${{ runner.os }}" STREQUAL "macOS")
-          set(url_os "mac_x64")
-          set(qt_package_name "qt.qt5.${qt_version_dotless}.clang_64")
-          set(qt_dir_prefix "${qt_version}/clang_64")
-        endif()
-
-        set(qt_base_url "https://download.qt.io/online/qtsdkrepository/${url_os}/desktop/qt5_${qt_version_dotless}")
-        file(DOWNLOAD "${qt_base_url}/Updates.xml" ./Updates.xml SHOW_PROGRESS)
-
-        file(READ ./Updates.xml updates_xml)
-        string(REGEX MATCH "<Name>${qt_package_name}.*<Version>([0-9+-.]+)</Version>.*<DownloadableArchives>qtbase([a-zA-Z0-9_-]+).7z"
-          updates_xml_output "${updates_xml}")
-        set(package_version ${CMAKE_MATCH_1})
-        set(package_suffix ${CMAKE_MATCH_2})
-        string(REPLACE "-debug-symbols" "" package_suffix "${package_suffix}")
-
-        # Workaround for CMake's greedy regex
-        if ("${{ matrix.config.environment_script }}" MATCHES "vcvars32.bat")
-          string(REPLACE "X86_64" "X86" package_suffix "${package_suffix}")
-        endif()
-
-        file(MAKE_DIRECTORY qt5)
-
-        # Save the path for other steps
-        file(TO_CMAKE_PATH "$ENV{GITHUB_WORKSPACE}/qt5/${qt_dir_prefix}" qt_dir)
-        message("::set-output name=qt_dir::${qt_dir}")
-
-        foreach(package qtbase qtdeclarative qttools qtsvg)
-          file(DOWNLOAD
-            "${qt_base_url}/${qt_package_name}/${package_version}${package}${package_suffix}.7z" ./${package}.7z
-            SHOW_PROGRESS
-          )
-          execute_process(COMMAND ${CMAKE_COMMAND} -E tar xvf ../${package}.7z WORKING_DIRECTORY qt5)
-        endforeach()
-
-        file(READ "qt5/${qt_dir_prefix}/mkspecs/qconfig.pri" qtconfig)
-        string(REPLACE "Enterprise" "OpenSource" qtconfig "${qtconfig}")
-        string(REPLACE "licheck.exe" "" qtconfig "${qtconfig}")
-        string(REPLACE "licheck64" "" qtconfig "${qtconfig}")
-        string(REPLACE "licheck_mac" "" qtconfig "${qtconfig}")
-        file(WRITE "qt5/${qt_dir_prefix}/mkspecs/qconfig.pri" "${qtconfig}")
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: "${{ env.QT_VERSION }}"
+        modules: qtdeclarative qttools qtsvg
+        arch: "${{ matrix.config.msvc }}"
 
     - name: Download Qt Creator
       id: qt_creator
@@ -178,7 +125,7 @@ jobs:
         file(TO_CMAKE_PATH "$ENV{GITHUB_WORKSPACE}/qtcreator" qtcreator_dir)
 
         execute_process(
-          COMMAND ${{ steps.qt.outputs.qt_dir }}/bin/qmake
+          COMMAND qmake
             $ENV{PLUGIN_PRO}
             CONFIG+=release
             QTC_SOURCE="${qtcreator_dir}"
@@ -192,10 +139,7 @@ jobs:
     - name: Build
       shell: cmake -P {0}
       run: |
-        if ("${{ runner.os }}" STREQUAL "Windows")
-          set(ENV{PATH} "${{ steps.qt.outputs.qt_dir }}/bin/;$ENV{PATH}")
-        else()
-          set(ENV{PATH} "${{ steps.qt.outputs.qt_dir }}/bin/:$ENV{PATH}")
+        if (NOT "${{ runner.os }}" STREQUAL "Windows")
           set(ENV{LD_LIBRARY_PATH} "qtcreator/lib/Qt/lib:$ENV{LD_LIBRARY_PATH}")
         endif()
 
